# quickrhiitem

./: CMakeLists.txt  README.md  customrhiitem.cpp  customrhiitem.h  main.cpp  main.qml  rhiitem.cpp  rhiitem.h  rhiitem_p.h  testrhiitem.cpp  testrhiitem.h  texture.vert
